--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//br.schott.com.auth/auth-login.php=UTF-8
+encoding//br.schott.com.views/viewSearchOrder.php=UTF-8
